# project-archive

./: .gitignore  CLAUDE.md  Gemini.md  docker-compose.yml
backend/: .env  .env.example  Dockerfile  alembic.ini  celery_app.py  fix_db.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_02_15_1040-53e83c27d970_initial_migration.py  2026_02_22_2212-f13215c41b5d_add_sys_notification_table.py  2026_02_23_1023-88efb021a904_add_platform_management_models.py  2026_02_26_2208-5ef77622c1c5_add_user_profile_fields.py  2026_03_20_1615-b9d297427344_add_schedule_models.py  2026_03_22_1000-c4e1a7f83b21_add_is_superadmin_to_user.py  2026_03_22_1100-d5e2b8a91c34_add_preservation_collection_models.py  2026_04_12_2107-f19ee582a1e1_add_is_system_to_menu_and_role.py  2026_04_19_1659-2a6b72efc717_archive_management_foundation.py  2026_04_19_2027-cadddbb0fa28_archive_no_rule_engine.py  2026_04_20_2110-4ffd6fce0bcf_batch_import_tables.py  2026_04_23_2000-8d6c05abf461_add_form_layout_to_archive_category.py  2026_04_23_2035-eceabc81e6a9_add_sys_dict_tables.py  2026_04_25_1500-b3e7f2a1c9d4_rename_archive_fields_to_pinyin.py  2026_04_26_1000-f9a3c81d2e45_redesign_archive_tables.py  2026_05_22_0800-bfd3f6773934_ai_p1_tables.py  2026_06_07_1051-29d73422b76f_transfer_collection_tables.py  2026_06_09_1000-b7c1d2e3f4a5_utilization_application_tables.py  2026_06_09_1200-c8d2e3f4a5b6_util_workflow_fields.py  2026_06_10_0900-d9e3f4a5b6c7_four_natures_detection.py  2026_06_11_0900-e0f1a2b3c4d5_detection_batch.py  2026_06_12_0900-f1a2b3c4d5e6_appraisal_tables.py  2026_06_12_1500-a7b8c9d0e1f2_stat_annual_report.py  2026_06_12_1800-b8c9d0e1f2a3_attach_batch.py  2026_06_13_0900-c9d0e1f2a3b4_mj_value_overhaul.py  2026_06_13_1100-d0e1f2a3b4c5_storage_tables.py  2026_06_13_1400-e1f2a3b4c5d6_archive_full_text.py  2026_06_14_0900-f2a3b4c5d6e7_drop_archive_jdrq_kfly.py  2026_06_16_0900-a3b4c5d6e7f8_archive_shelf_id.py  2026_06_18_0900-b4c5d6e7f8a9_research_tables.py  2026_06_21_1700-f8a9b0c1d2e3_ai_ocr_job.py  (+10 more)
backend/app/: main.py
backend/scripts/: dify_discover.py  dify_dsl_builders.py  dify_setup.py  dify_sync.py
backend/tests/: conftest.py
(+565 files in other folders)
