[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "authlib>=1.6.8",
    "boto3>=1.42.49",
    "celery[redis]>=5.3.1",
    "fastapi[standard]>=0.128.0",
    "greenlet>=3.3.1",
    "httpx>=0.28.1",           # 异步 HTTP 客户端，用于调用 Dify API
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "minio>=7.2.20",
    "oss2>=2.19.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.11.0",
    "pytest-mock>=3.15.1",
    "python-json-logger>=4.0.0",
    "elasticsearch[async]>=8.0.0",  # 全文检索客户端
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
    "openpyxl>=3.1.0",          # XLSX 文件解析（批量导入）
    "xlsxwriter>=3.2.0",        # XLSX 报表生成（导入结果报表）
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",       # 内存数据库（单元测试用）
    "black>=26.1.0",
    "httpx>=0.28.1",           # 集成测试 AsyncClient
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",       # 覆盖率统计
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=60"
